@@ -4,8 +4,11 @@ import org.gradle.api.JavaVersion
 import org.gradle.api.Plugin
 import org.gradle.api.Project
 import org.gradle.kotlin.dsl.apply
+import org.gradle.kotlin.dsl.named
 import org.gradle.kotlin.dsl.withType
 import org.jetbrains.intellij.IntelliJPlugin
+import org.jetbrains.intellij.IntelliJPluginExtension
+import org.jetbrains.intellij.tasks.RunIdeTask
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 class IntellijGradlePlugin: Plugin<Project> {
@@ -19,6 +22,21 @@ class IntellijGradlePlugin: Plugin<Project> {
                 jvmTarget = JavaVersion.VERSION_11.toString()
                 javaParameters = true
             }
+        }
+
+        extensions.configure<IntelliJPluginExtension>("intellij") {
+            version.set("IC-2021.2")
+            configureDefaultDependencies.set(false)
+
+            type.set("IC")
+            downloadSources.set(true)
+            updateSinceUntilBuild.set(true)
+            sameSinceUntilBuild.set(true)
+        }
+
+        tasks.named<RunIdeTask>("runIde") {
+            // avoid warning log
+            jvmArgs("--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED")
         }
     }
 }
